--- a/assets/output.css
+++ b/assets/output.css
@@ -505,7 +505,7 @@
 @font-face {
   font-family: "DMsans";
   font-display: swap;
-  src: url("/assets/fonts/DMSans-VariableFont_opsz,wght.ttf");
+  src: url("https://ireisti.github.io/bento-grid/assets/fonts/DMSans-VariableFont_opsz,wght.ttf");
 }
 .bento-grid {
   margin: calc(var(--spacing) * 4);
