--- a/input.css
+++ b/input.css
@@ -3,7 +3,7 @@
 @font-face {
     font-family: "DMsans";
     font-display: swap;
-    src: url("/assets/fonts/DMSans-VariableFont_opsz,wght.ttf");
+    src: url("/assets/fonts/DMSans-VariableFont_opsz,wght.ttf") format(truetype);
 }
 
 @theme {
