--- a/assets/output.css
+++ b/assets/output.css
@@ -193,9 +193,6 @@
   .mx-0 {
     margin-inline: calc(var(--spacing) * 0);
   }
-  .my-5 {
-    margin-block: calc(var(--spacing) * 5);
-  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -204,9 +201,6 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
-  }
-  .mt-10 {
-    margin-top: calc(var(--spacing) * 10);
   }
   .mt-24 {
     margin-top: calc(var(--spacing) * 24);
@@ -229,9 +223,6 @@
   .grid {
     display: grid;
   }
-  .table {
-    display: table;
-  }
   .h-\[410px\] {
     height: 410px;
   }
@@ -240,12 +231,6 @@
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
   }
   .grid-cols-\[1\.75fr_2fr\] {
     grid-template-columns: 1.75fr 2fr;
@@ -274,12 +259,8 @@
   .rounded-xl {
     border-radius: var(--radius-xl);
   }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
-  }
-  .bg-amber-50 {
-    background-color: var(--color-amber-50);
+  .bg-\[\#f6f5f6\] {
+    background-color: #f6f5f6;
   }
   .bg-primary-100 {
     background-color: var(--color-primary-100);
@@ -396,13 +377,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .hover\:underline {
     &:hover {
       @media (hover: hover) {
@@ -505,7 +479,7 @@
 @font-face {
   font-family: "DMsans";
   font-display: swap;
-  src: url("https://ireisti.github.io/bento-grid/assets/fonts/DMSans-VariableFont_opsz,wght.ttf");
+  src: url("/assets/fonts/DMSans-VariableFont_opsz,wght.ttf") format(truetype);
 }
 .bento-grid {
   margin: calc(var(--spacing) * 4);
@@ -551,11 +525,6 @@
     grid-template-areas: 'box-2' 'box-5' 'box-6' 'box-3' 'box-8' 'box-7' 'box-1' 'box-4';
   }
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-leading {
   syntax: "*";
   inherits: false;
@@ -564,18 +533,11 @@
   syntax: "*";
   inherits: false;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
-      --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
-      --tw-outline-style: solid;
     }
   }
 }
